--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "serve": "node server.js"
   },
   "dependencies": {
-    "generic-module": "git+https://github.com/hosting232323/generic-module.git",
     "@mdi/font": "7.0.96",
     "core-js": "^3.29.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "generic-module": "git+https://github.com/hosting232323/generic-module.git",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
+    "template_frontend": "file:",
     "vue": "^3.3.4",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0"
