--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "roboto-fontface": "*",
     "template_frontend": "file:",
     "vue": "^3.3.4",
+    "vue-markdown-render": "^2.2.1",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0"
   },
