--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "template_frontend",
+  "type": "module",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -23,12 +24,12 @@
     "vuetify": "^3.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@vitejs/plugin-vue": "^6.0.0",
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.3.0",
-    "sass": "^1.60.0",
+    "sass": "^1.89.2",
     "unplugin-fonts": "^1.1.1",
-    "vite": "^4.5.3",
-    "vite-plugin-vuetify": "^1.0.2"
+    "vite": "^7.0.0",
+    "vite-plugin-vuetify": "^2.1.1"
   }
 }
