--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "generic-module": "git+https://github.com/hosting232323/generic-module.git",
+    "marked": "^16.1.1",
     "ol": "^10.5.0",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
